--- a/assets/css/detalhar-produto.css
+++ b/assets/css/detalhar-produto.css
@@ -1,3 +1,5 @@
+@import 'styles.css';
+
 :root {
     --cor-fonte-principal-site: rgb(136, 135, 135);
     --cor-parte-inferior-bordas: 2px solid rgb(224, 221, 221);
@@ -30,20 +32,13 @@ main {
 
 .imagem-principal {
     margin-top: 5rem;
-    height: 300px;
-}
-
-.favoritos-icone {
-    width: 30px;
+    height: 250px;
 }
 
 .imagem-apresentacao-produto {
     border: 2px solid gray;
     border-radius: 0.2rem;
     margin: 1rem;
-}
-
-.descricao {
 }
 
 .informacoes-lateral-a-imagem-principal {
@@ -79,21 +74,11 @@ main {
 }
 
 .imagems-avalicao {
-    width: 50px;
-}
-
-.card-secundario-aside {
-    display: flex !important;
-    width: auto !important;
-}
-
-.fontes-em-destaque {
-    color: var(--fontes-em-destaque);
+    width: 30px;
 }
 
 footer{
     background-color: var(--cor-de-fundo-principal);
-
 }
 
 .lista-footer{
