--- a/assets/css/configuracoes.css
+++ b/assets/css/configuracoes.css
@@ -1,13 +1,10 @@
-body {
-    height: 100vh;
-}
 
 header {
     height: 10%;
 }
 
 main {
-    height: calc(100vh - 20%);
+    height: auto;
 }
 
 
@@ -27,3 +24,5 @@ aside {
 .lista-footer {
     list-style-type: none;
 }
+
+ 
